# stereo-sgm-opencl

./: CMakeLists.txt  Makefile  main.cpp  stereo_camera.cpp  stereo_camera.hpp  withrobot_camera.cpp  withrobot_imu_parser.hpp
camera/: CMakeLists.txt  stereo_camera.hpp
data/: ocams_calibration_720p.xml
data/ocl/: census.cl  check_consistency.cl
src/: CMakeLists.txt  census_transform.cpp  census_transform.h  cl_utilities.h  common.h  device_buffer.h  device_kernel.h  libsgm_ocl.cpp  libsgm_ocl.h  path_aggregation.cpp  path_aggregation.h  sgm.cpp  sgm.h  sgm_details.cpp  sgm_details.h  types.h  winner_takes_all.cpp  winner_takes_all.h
